# mines-market-api

./: .gitignore  APIFunctions.py  LICENSE  README.md  __init__.py  example.py  full_menu_info.json  main.py  menu.py  parsed_menu.json  pyproject.toml  setup.py
mines_market/: __init__.py  api_functions.py  example.py  menu.py
src/: __init__.py  api_functions.py  example.py  setup.py
src/ACM-MinesMarketAPI/: setup.py
